; ModuleID = '/home/carl/AnghaBench/linux/drivers/input/touchscreen/extr_cyttsp_core.c_cyttsp_close.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/input/touchscreen/extr_cyttsp_core.c_cyttsp_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.input_dev = type { i32 }
%struct.cyttsp = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.input_dev*)* @cyttsp_close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cyttsp_close(%struct.input_dev* %0) #0 {
  %2 = alloca %struct.input_dev*, align 8
  %3 = alloca %struct.cyttsp*, align 8
  store %struct.input_dev* %0, %struct.input_dev** %2, align 8
  %4 = load %struct.input_dev*, %struct.input_dev** %2, align 8
  %5 = call %struct.cyttsp* @input_get_drvdata(%struct.input_dev* %4)
  store %struct.cyttsp* %5, %struct.cyttsp** %3, align 8
  %6 = load %struct.cyttsp*, %struct.cyttsp** %3, align 8
  %7 = getelementptr inbounds %struct.cyttsp, %struct.cyttsp* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %13, label %10

10:                                               ; preds = %1
  %11 = load %struct.cyttsp*, %struct.cyttsp** %3, align 8
  %12 = call i32 @cyttsp_disable(%struct.cyttsp* %11)
  br label %13

13:                                               ; preds = %10, %1
  ret void
}

declare dso_local %struct.cyttsp* @input_get_drvdata(%struct.input_dev*) #1

declare dso_local i32 @cyttsp_disable(%struct.cyttsp*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
